[project]
name = "date-nite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=6.0.2",
    "gunicorn>=23.0.0",
    "google-genai>=1.4.0",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.9.0",
]
